# linux-wechat-hook-dev

./: .gitignore  BUILD_PROCESS.md
base_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  version.h
base_build/demo/: Makefile  cmake_install.cmake  threadpool  timer
base_build/install/include/cmdline/: cmdline.h
base_build/install/include/log/: log.h
base_build/install/include/threadpool/: lthread.h  workqueue.h
base_build/install/include/timer/: ltimer.h
base_build/install/include/util/: single.hpp  type.hpp
base_build/src/: Makefile  cmake_install.cmake
demo/: CMakeLists.txt  hook.h  hook_trampoline.S  wechat_hook.cpp
src/infector/elf/: elf_section.h
